examples/test/testpolicy3199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3199
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key0: value27
      key28: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value29
      podSelector:
        matchLabels:
          key22: value46
          key39: value15
